--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
 pixlutter
+*.la
+*.lo
 *.o
+*.so
+*.a
+*.exe
+*.pyc
+*.gcno
+*.gcda
+.deps
+.ditz-config
+.gdb_history
+.libs
+*~
+aclocal.m4
+autom4te.cache
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.lt
+config.status
+config.sub
+config.sh
+configure
+depcomp
+/dist
+install-sh
+/libtool*
+ltmain.sh
+lt*.m4
+missing
+stamp-h1
+Makefile
+Makefile.in
+/tmp
+test-driver
+test/run-test.sh.log
+test/run-test.sh.trs
+test/test-suite.log
