Use pixlutter directory for classes

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,4 +8,4 @@ LIBS    = $(shell pkg-config --libs clutter-1.0)
 
 AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = pixlutter
-pixlutter_SOURCES = src/pixlutter.c src/window.c
+pixlutter_SOURCES = src/pixlutter.c src/pixlutter/window.c
