--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,4 +4,5 @@ LDFLAGS = -Wall -g -no-undefined
 CFLAGS  = -Wall -g $(shell pkg-config --cflags clutter-1.0)
 LIBS    = $(shell pkg-config --libs clutter-1.0)
 
-libpixlutter_la_SOURCES = pixlutter.c window.c
+AUTOMAKE_OPTIONS = subdir-objects
+libpixlutter_la_SOURCES = pixlutter.c pixlutter/window.c
