Rearrange sourece files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = $$ACLOCAL_ARGS
 
-SUBDIRS = src test
+SUBDIRS = lib test
 
 LDFLAGS = -Wall -g -no-undefined
 CFLAGS  = -Wall -g $(shell pkg-config --cflags clutter-1.0)
@@ -8,4 +8,9 @@ LIBS    = $(shell pkg-config --libs clutter-1.0)
 
 AUTOMAKE_OPTIONS = subdir-objects
 bin_PROGRAMS = pixlutter
-pixlutter_SOURCES = src/pixlutter.c src/pixlutter/window.c
+pixlutter_SOURCES = src/pixlutter.c
+
+DEFAULT_INCLUDES = \
+	-I$(top_srcdir)/include
+
+pixlutter_LDADD = $(top_builddir)/lib/libpixlutter.la
