--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,5 +4,8 @@ LDFLAGS = -Wall -g -no-undefined
 CFLAGS  = -Wall -g $(shell pkg-config --cflags clutter-1.0)
 LIBS    = $(shell pkg-config --libs clutter-1.0)
 
-AUTOMAKE_OPTIONS = subdir-objects
-libpixlutter_la_SOURCES = pixlutter.c pixlutter/window.c
+libpixlutter_la_SOURCES = window.c window.h
+
+DEFAULT_INCLUDES = \
+	-I$(top_builddir)/include \
+	-I$(top_builddir)/include/pixlutter
