Support archiving command `make dist`

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,7 @@ LDFLAGS = -Wall -g -no-undefined
 CFLAGS  = -Wall -g $($(shell pkg-config --cflags clutter-1.0)
 LIBS    = $(shell pkg-config --libs clutter-1.0)
 
-pixlutter_SOURCES = pixlutter.c pixlutter.h
+pixlutter_SOURCES = pixlutter.c
 
 DEFAULT_INCLUDES = \
 	-I$(top_srcdir)/include
