--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = pixlutter
 
 LDFLAGS = -Wall -g -no-undefined
-CFLAGS  = -Wall -g $($(shell pkg-config --cflags clutter-1.0)
-LIBS    = $(shell pkg-config --libs clutter-1.0)
+CFLAGS  = -Wall -g $(CLUTTER_CFLAGS)
+LIBS    = $(CLUTTER_LIBS)
 
 pixlutter_SOURCES = pixlutter.c
 
