Revert "Support archiving command `make dist`"
This reverts commit c89a3b4ecb3d55ac61cfd2f038c708ec0d6b18af.

Because extra files are included now.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,7 +4,7 @@ LDFLAGS = -Wall -g -no-undefined
 CFLAGS  = -Wall -g $(CLUTTER_CFLAGS)
 LIBS    = $(CLUTTER_LIBS)
 
-libpixlutter_la_SOURCES = window.c
+libpixlutter_la_SOURCES = window.c window.h
 
 DEFAULT_INCLUDES = \
 	-I$(top_builddir)/include \
